# 3d-ecoli

./: .gitignore  README.md  pyproject.toml
docs/history/: 2026-06-13-3d-ecoli-design.md  2026-06-13-3d-ecoli-plan-2-bridge-workspace.md
docs/superpowers/plans/: 2026-06-28-vr-usability-phase1.md
docs/superpowers/specs/: 2026-06-28-vr-usability-phase1-design.md
ecoli_3d/: __init__.py  build.py  composite.py
ecoli_3d/data/: uniprot_map.json  v2ecoli_state.npz  v2ecoli_state_division.npz
ecoli_3d/publish/: 01_build_states.sh  02_stage_compact.py  03_assemble_local_view.py  04_publish_r2.sh  REPRODUCE.md
ecoli_3d/webapp/: index.html
scripts/: capture_structural_snapshot.py
tests/: test_build_chromosome_fields.py  test_build_peptides.py  test_build_ribosomes.py  test_build_rnaps.py  test_build_rnas.py  test_chromosome_index.py  test_ribosome_state.py  test_rna_state.py  test_rnap_state.py
