[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoli-3d"
version = "0.1.0"
description = "3D structural model of an E. coli cell — packs a v2ecoli molecular state into a 3D cell via pbg-parsimony"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    # the molecular state + cell-envelope geometry (ShapeStep) come from v2ecoli;
    # the packing engine (Ingredient/Chromosome/build_pack) from pbg-parsimony.
    "v2ecoli",
    "pbg-parsimony",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["ecoli_3d*"] } }

[tool.setuptools.package-data]
# ship the committed cell-state snapshots + reference tables + webapp + publish scripts
"ecoli_3d" = ["data/*.npz", "data/*.csv", "data/*.json", "webapp/*", "publish/*"]

[tool.uv.sources]
# uv sources are NOT transitive: because we depend on v2ecoli (which resolves its
# own deps from git, not PyPI), a from-scratch resolve here must declare the same
# git sources so the transitive pbg/vivarium packages resolve to consistent URLs.
# Mirrors v2ecoli's [tool.uv.sources] + pbg-basic-processes (pulled in via
# vivarium-dashboard). Keep in sync with v2ecoli's pyproject.
v2ecoli = { git = "https://github.com/vivarium-collective/v2ecoli.git", branch = "main" }
process-bigraph = { git = "https://github.com/vivarium-collective/process-bigraph.git", branch = "main" }
bigraph-schema = { git = "https://github.com/vivarium-collective/bigraph-schema.git", branch = "main" }
pbg-superpowers = { git = "https://github.com/vivarium-collective/pbg-superpowers.git", branch = "main" }
pbg-copasi = { git = "https://github.com/vivarium-collective/pbg-copasi.git", branch = "main" }
pbg-parsimony = { git = "https://github.com/vivarium-collective/pbg-parsimony.git", branch = "main" }
pbg-bioreactordesign = { git = "https://github.com/vivarium-collective/pbg-bioreactordesign.git", branch = "main" }
pbg-ketchup = { git = "https://github.com/vivarium-collective/pbg-ketchup.git", branch = "main" }
pbg-emitters = { git = "https://github.com/vivarium-collective/pbg-emitters.git", branch = "main" }
pbg-torch = { git = "https://github.com/vivarium-collective/pbg-torch.git", branch = "main" }
pbg-basic-processes = { git = "https://github.com/vivarium-collective/pbg-basic-processes.git", branch = "main" }
vivarium-dashboard = { git = "https://github.com/vivarium-collective/vivarium-dashboard.git", branch = "main" }
viva-munk = { git = "https://github.com/vivarium-collective/Viva-munk.git", branch = "main" }
spatio-flux = { git = "https://github.com/vivarium-collective/spatio-flux.git", branch = "main" }
ecoli-sources = { git = "https://github.com/vivarium-collective/ecoli-sources.git", rev = "e0fcfab181de59666b9f8ad2d1cb80ffe5c2a314" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: unit / state-reader tests (no simulation)",
    "slow: full simulation builds (minutes)",
    "sim: calls composite.run()",
]

[tool.uv]
# pbg-basic-processes is pulled in transitively (pbg-superpowers, vivarium-dashboard)
# via branch-pinned git URLs that uv won't unify ("conflicting URLs"). Force a
# single precise (commit-pinned) requirement so the whole closure resolves.
override-dependencies = [
    "pbg-basic-processes @ git+https://github.com/vivarium-collective/pbg-basic-processes.git@af83ccc834a84af4e4b3bb5d114aca79713cf401",
]
